--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "./node_modules/.bin/karma start test/karma.conf.js --single-run --browsers PhantomJS"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
   "devDependencies": {
     "grunt-cli": "~0.1.9",
     "grunt": "~0.4.1",
-    "grunt-karma": "~0.4.5"
+    "grunt-karma": "~0.4.5",
+    "karma": "~0.8.7"
   }
 }
